--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bxl-dribbble"></i></div>
               <h4><a href="">Web Development</a></h4>
-              <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+              <p>We work on lstest technology fro front and back-end web development.</p>
             </div>
           </div>
 
@@ -283,7 +283,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bx-mobile"></i></div>
               <h4><a href="">App Development</a></h4>
-              <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+              <p>We have experts in both Android and IOS development.</p>
             </div>
           </div>
 
@@ -291,7 +291,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bx-unite"></i></div>
               <h4><a href="">Software Development</a></h4>
-              <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+              <p>Leading experts in Software development.</p>
             </div>
           </div>
 
@@ -299,7 +299,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bx-fingerprint"></i></div>
               <h4><a href="">Web Protection</a></h4>
-              <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
+              <p>Best quality web testing software and protection services.</p>
             </div>
           </div>
 
